Enhance Windows compatibility and improve CLI feedback
- Updated configuration paths for Windows to prefer APPDATA and LOCALAPPDATA.
- Improved reset command to report success and removed entries count.
- Enhanced path counting output format for clarity.
- Refactored hint filtering to ensure case-insensitive matching using Locale.ROOT.
- Updated documentation to reflect changes in installation and configuration for Windows users.